neumorphic effect + dark mode + webView added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: youtube
-description: A new Flutter project.
+description: A new Youtube-Flutter integration project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.1.0
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
