build's internet permission added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.youtube">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
-        android:label="YouTubeFlutter"
+        android:label="YouTube Flutter"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
